# george

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  setup-macbook-coach.md
.claude/: settings.json  settings.local.json
.claude/agents/: alerts.md  coach.md  periodization.md
.claude/commands/coach/: chat.md  checkin.md  debrief.md  help.md  onboard.md  plan.md  postrace.md  raceweek.md  review.md  status.md
.claude/hooks/: pull-data.sh  sync-data.sh
.claude/services/coach/: intervals-icu.md
data/: current-plan.md
data/archive/weekly/: 2026-W10.md  2026-W11.md  2026-W12.md
data/logs/: conversations.md  conversations.md.bak  daily-log.md  daily-log.md.bak  weekly-reviews.md
data/logs/conversations/: 2026-03-10-0830-checkin.md  2026-03-10-1847-debrief.md  2026-03-10-1932-chat.md  2026-03-10-1935-chat.md  2026-03-10-1938-chat.md  2026-03-11-0745-checkin.md  2026-03-11-1020-debrief.md  2026-03-12-0800-checkin.md  2026-03-12-1747-debrief.md  2026-03-16-0900-checkin.md  2026-03-16-0931-review.md  2026-03-16-0951-plan.md  2026-03-17-0800-checkin.md  2026-03-17-1730-chat-(vervolg).md  2026-03-17-1830-debrief.md  2026-03-17-2020-chat.md  2026-03-18-1127-debrief.md  2026-03-19-2145-chat.md  (+14 more)
data/memory/: coach-memory.md
data/plans/: current-plan.md  marathon-sub345.md
data/references/: athlete-profile.md  events.md
george/: __main__.py  app.py  claude.py  dates.py  files.py  icu.py  migrate_logs.py  persona.py  readiness.py
george/commands/: chat.py  checkin.py  debrief.py  plan.py  postrace.py  raceweek.py  review.py  status.py
scripts/: icu
(+17 files in other folders)
