[project]
name = "george"
version = "0.1.0"
description = "AI Endurance Coach TUI"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
george = "george.app:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
